syntax = "proto3";

package commonpb;

option go_package = "github.com/yanet-platform/yanet2/common/commonpb;commonpb";

message ModuleId {
	string type = 1;
	string name = 2;
}

message FunctionId {
	string name = 1;
}

message PipelineId {
	string name = 1;
}

message Device {
	repeated DevicePipeline input = 2;
	repeated DevicePipeline output = 3;
}

message DevicePipeline {
	string name = 1;
	uint64 weight = 2;
}
